homelab/jafner-dev/dndtools/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dndtools
spec:
  selector:
    matchLabels:
      app: dndtools
  replicas: 1
  template:
    metadata:
      labels:
        app: dndtools
    spec:
      containers:
      - name: dndtools
        image: jafner/5etools-docker
        ports:
        - containerPort: 80
