homelab/jafner-dev/dndtools/Service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "dndtools"
  namespace: "default"
spec:
  ports:
  - protocol: "TCP"
    name: web
    port: 80
  selector:
    app: "dndtools"
