homelab/jafner-dev/dndtools/Ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "dndtools"
  namespace: "default"
spec:
  defaultBackend:
    service:
      name: "dndtools"
      port:
        number: 80
status:
  loadBalancer: {}
